Updated resume, fix button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -663,10 +663,6 @@ nav {
     display: flex;
   }
 
-  .secondary {
-    margin-left: 1.14em;
-  }
-
   .project_1_CORE, .project_2_Movement {
     padding-top: 8.8em;
   }
